--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="text-center">
   {% include contact.html %}
   <p>Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}</p>
+  <p>Built by <a href="https://aneacsu.com">Andrei Neacsu</a></p>
 </footer>
