--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,6 +7,7 @@
   
   <img src="/img/projects/{{ page.slug }}/{{ page.banner }}" alt="{{ page.banner-alt }}" class="banner">
   <main>
+    <h1>{{ page.title }}</h1>
 	  {{ content }}
   </main>
 
