--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@
       <section class="portfolio-grid">
         {% for post in site.posts %}
             <figure class="portfolio-figure">
-              <a href="{{ post.url }}" class="overlay">{{ post.title }}</a>
-              <img src="{{ post.thumbnail }}" alt="{{ post.alt }}" class="rounded">
+              <a href="/assets/{{ post.url }}" class="overlay">{{ post.title }}</a>
+              <img src="/assets/{{ post.thumbnail }}" alt="{{ post.alt }}" class="rounded">
             </figure>
         {% endfor %}
       </section>
