--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,7 +5,7 @@
 <body id="page-top" class="index">
   {% include header.html %}
   
-  <img src="{{ page.banner }}" alt="{{ page.alt }}" class="banner">
+  <img src="/assets/{{ page.banner }}" alt="{{ page.alt }}" class="banner">
   <main>
     <h1>{{ page.title }}</h1>
 	  {{ content }}
